# gnome-grub-settings

./: .gitignore  .gitlab-ci.yml  README.md  com.tsbarnes.GrubSettings.json  meson.build  python3-requirements.json  requirements.txt
data/: com.tsbarnes.GrubSettings.appdata.xml.in  com.tsbarnes.GrubSettings.desktop.in  com.tsbarnes.GrubSettings.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config_file.py  gnome-grub-settings.in  gnome_grub_settings.gresource.xml  main.py  meson.build  window.py  window.ui
